--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "image-downloader": "^4.3.0"
   }
 }
